[package]
name = "mandelbrot1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { git = "https://github.com/image-rs/image" }
num-complex = "0.4"
openssl = { version = "0.10", features = ["vendored"] }

